# faf_cn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  dialyzer.ignore-warnings.exs  docker-compose.yml  fly.toml  mix.exs  tailwind.config.js
fafcn-in-ocaml/: .gitignore  Makefile  README.md  dune  dune-project  dune-workspace  fafcn.opam  index.html  package.json  vite.config.mjs
fafcn-in-ocaml/backend/: dune
fafcn-in-ocaml/backend/src/: server.ml
fafcn-in-ocaml/public/: styles.css
fafcn-in-ocaml/scripts/: fafcn-env.sh
fafcn-in-ocaml/src/eco-guide/: App.re  Components.re  Data.re  Eco.re  Home.re  Layout.re  Models.re  Test.re  dune  index.html
fafcn-in-ocaml/src/eco-guide/Components/: BaseUnitCard.re  ComparisonCard.re  EcoComparison.re  EcoGuide.re  EmptyState.re  FactionTabs.re  FilterBar.re  UnitGrid.re
fafcn-in-ocaml/src/eco-guide/Data/: Units_aeon.re  Units_cybran.re  Units_data.re  Units_seraphim.re  Units_uef.re
fafcn-in-ocaml/src/eco-guide/Eco/: Calculator.re
fafcn-in-ocaml/src/eco-guide/Models/: Faction.re  Filter.re  UnitModel.re
fafcn-in-rust/: Cargo.toml  IMPLEMENTATION_PLAN.md
fafcn-in-rust/crates/fafcn-core/: Cargo.toml
fafcn-in-rust/crates/fafcn-core/src/: lib.rs
fafcn-in-rust/crates/fafcn-core/src/eco/: build_item.rs  calculator.rs  mod.rs  simulator.rs  state.rs
fafcn-in-rust/crates/fafcn-core/src/models/: mod.rs  unit.rs  units_data.rs
fafcn-in-rust/crates/fafcn-web/: Cargo.toml  Dioxus.toml  README.md
fafcn-in-rust/crates/fafcn-web/assets/: tailwind.css
fafcn-in-rust/crates/fafcn-web/assets/styling/: eco_guide.css  main.css  navbar.css
fafcn-in-rust/crates/fafcn-web/public/: index.html
fafcn-in-rust/crates/fafcn-web/src/: app.rs  main.rs
fafcn-in-rust/crates/fafcn-web/src/components/: base_unit_card.rs  header.rs  mod.rs
fafcn-in-rust/crates/fafcn-web/src/data/: mod.rs  units.rs
fafcn-in-rust/crates/fafcn-web/src/hooks/: mod.rs  use_drag_drop.rs
fafcn-in-rust/crates/fafcn-web/src/pages/: eco_guides.rs  eco_prediction.rs  home.rs  mod.rs
fafcn-in-rust/doc/: 01-eco-guide.md  01-quick-start.md  02-architecture.md  03-state-management.md  04-components.md  05-deployment.md  README.md
(+206 files in other folders)
