opam-version: "2.0"
synopsis: "FAF CN - OCaml/Melange implementation"
depends: [
  "ocaml" {= "5.4.0"}
  "melange" {= "6.0.1-54"}
  "reason-react" {>= "0.17.0"}
  "dune" {>= "3.20"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/username/fafcn.git"
